app-configs/manifest-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-expressjs-sample
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    run: node-expressjs-sample
  sessionAffinity: None
  type: ClusterIP
